fix: Task 4 review findings — add @ApiAccessLog, remove redundant DB query, query GUEST role by code, add null guard, use List.of()